--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       color: #ffebee;
       /* Bright red for hearts */
       font-size: 2em;
+      font-family: 'Parisienne', cursive;
     }
 
     .buttons {
@@ -124,7 +125,7 @@
   </div>
 
   <div id="responseMessage" class="hidden">
-    <p class="heart">𝒀𝒂𝒚𝒚𝒚! 𝑰 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖 𝒃𝒂𝒃𝒚𝒚𝒚! 𖦹 ☼ ⋆｡˚⋆ฺ ♡ </p>
+    <p class="heart">Yayyy!I love you babyyy! 𖦹 ☼ ⋆｡˚⋆ฺ ♡ </p>
     <img
       src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExYXgwY3J0azF3cDJjazBzMmg4d2Nnam53NXg3c3dlNmpuYjdoc2ZhbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xOvhMKk3EyS1LKQtkK/giphy.gif"
       alt="Celebration" style="width: 300px; border-radius: 10px; margin: 20px;">
